# basemind

./: .ai-rulez-generated.json  .gitignore  .mcp.json  .pre-commit-config.yaml  .rumdl.toml  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  Taskfile.yaml  basemind.toml  buf.gen.yaml  buf.yaml  build.rs  deny.toml  gemini-extension.json  kimi.plugin.json  llms.txt  package.json  poly.toml  settings.json
.agents/plugins/: marketplace.json
.ai-rulez/: .generated-manifest.json  config.toml
.ai-rulez/agents/: harness-interpreter.md  mcp-tool-author.md  rust-perf-engineer.md  scanner-extension.md
.ai-rulez/commands/: check.md  harden.md  scan.md  serve.md
.ai-rulez/context/: code-style.md  crate-layout.md  harden-harness.md  inverted-index.md  mcp-surface.md  poly.md  scanner-pipeline.md
.ai-rulez/rules/: agent-comms.md  basemind-usage.md  mcp-tool-conventions.md  module-size-cap.md  perf-discipline.md  release-versioning.md  schema-and-blob-compat.md  tdd-and-poly.md  tdd-and-prek.md
.claude-plugin/: marketplace.json  plugin.json  statusline.sh
.claude-plugin/commands/: bm-stats.md
.codex-plugin/: plugin.json
.codex-plugin/hooks/: hooks.json  session-start
.cursor-plugin/: plugin.json
.cursor-plugin/hooks/: hooks.json  inbox-notify  run-hook.cmd
.github/workflows/: buf.yaml  ci.yaml  docs.yaml  publish.yaml
.pi/extensions/: basemind.ts
benches/: extract.rs  git_history.rs  hashing.rs  query.rs
commands/: bm-doctor.md  bm-scan.md  bm-stats.md  bm-statusline.md  bm.md
crates/lsp-positions/: Cargo.toml  README.md
crates/stack-graphs/: CHANGELOG.md  Cargo.toml  README.md
crates/stack-graphs/src/: arena.rs  cycles.rs  graph.rs  lib.rs  partial.rs  paths.rs  stitching.rs
crates/stack-graphs/tests/it/: arena.rs  can_find_local_nodes.rs  can_find_node_partial_paths_in_database.rs  can_find_partial_paths_in_file.rs  can_find_root_partial_paths_in_database.rs  can_jump_to_definition.rs  can_jump_to_definition_with_forward_partial_path_stitching.rs  cycles.rs  graph.rs  main.rs  partial.rs  stitching.rs  util.rs
crates/stack-graphs/tests/it/test_graphs/: mod.rs  simple.rs
crates/tree-sitter-graph/: CHANGELOG.md  Cargo.toml  README.md
crates/tree-sitter-graph/src/: parse_error.rs  variables.rs
crates/tree-sitter-graph/src/execution/: lazy.rs
crates/tree-sitter-stack-graphs/: CHANGELOG.md  Cargo.toml
docs/: ARCHITECTURE.md
docs/demos/: multi-agent-review.md
docs/media/: MCP_DEMO.md  README.md  demo.cast
hooks/: compress-output  hooks.json  inbox-notify  pre-tool-guard  read-cache  session-start
monitors/: monitors.json
npm-package/: README.md  index.js  install.js  package.json
opencode-plugin/: basemind.js  package.json
opencode-plugin/commands/: bm-stats.md
pip-package/: README.md  pyproject.toml
pip-package-hermes/: README.md  pyproject.toml
pip-package-hermes/basemind_hermes_plugin/: __init__.py  hermes.py  plugin.yaml
pip-package-hermes/basemind_hermes_plugin/commands/: bm-init.md  bm-statusline.md
pip-package-hermes/basemind_hermes_plugin/skills/basemind-doctor/: SKILL.md
pip-package-hermes/basemind_hermes_plugin/skills/basemind-git-history/: SKILL.md
pip-package-hermes/basemind_hermes_plugin/skills/basemind-scan/: SKILL.md
pip-package-hermes/tests/: test_hermes_register.py
pip-package/basemind/: __init__.py  cli.py  downloader.py  hermes.py  plugin.yaml
pip-package/basemind/commands/: bm-doctor.md  bm-scan.md
pip-package/basemind/skills/basemind/: SKILL.md
pip-package/basemind/skills/basemind-code-search/: SKILL.md
pip-package/tests/: test_downloader_platform.py  test_hermes_register.py
schema/: README.md  basemind-config-v1.schema.json  gitmind-config-v1.schema.json
scripts/: bench.sh  comms-monitor.sh  demo-record.sh  demo.sh  glibc228_compat.c  harden.sh  mcp-launch.sh  package-release.sh  release-bump.sh  sync-plugin-skills.sh  sync-to-codex-plugin.sh  update-homebrew-formula.sh
skills/basemind/: SKILL.md
skills/basemind-code-search/: SKILL.md
skills/basemind-comms/: SKILL.md
skills/basemind-doctor/: SKILL.md
skills/basemind-documents/: SKILL.md
skills/basemind-stats/: SKILL.md
skills/multi-agent-room/: SKILL.md
src/: chunk.rs  embeddings.rs  git.rs  git_cache.rs  hashing.rs  lang.rs  lang_cli.rs  lib.rs  main.rs  mcp.rs  path.rs  query.rs  render.rs  scanner.rs  scanner_code.rs  scanner_docs.rs  scanner_file.rs  scanner_filter.rs  scanner_lanes.rs  store.rs  store_blob.rs  store_gc.rs  store_gc_workspace.rs  store_lock.rs  sysres.rs  url.rs  version.rs  watcher.rs
src/a2a/: auth.rs  mod.rs  proto.rs  server.rs  state.rs
src/cli/: admin.rs  codemap.rs  comms.rs  comms_daemon.rs  context.rs  git.rs  governance.rs  init.rs  init_rules.rs  memory.rs  mod.rs  registry.rs  render.rs  shells.rs  web.rs
src/comms/: client.rs  cursor.rs  daemon.rs  daemon_rooms.rs  daemon_tests.rs  daemon_threads.rs  frontend_inproc.rs  frontend_named_pipe.rs  frontend_uds.rs  git_history_ops.rs  identity.rs  ids.rs  keys.rs  memory_proto.rs  mod.rs  model.rs  proposals_proto.rs  protocol.rs  resolved_proto.rs  scope.rs  singleton.rs  store.rs  transport.rs  workspace_pool.rs  (+1 more)
tests/: a2a_smoke.rs  agent_identity_smoke.rs  bug_13_cli.rs  bug_18_cli.rs  bug_20_cli.rs  bug_22_cli.rs  bug_23_git_cache.rs  bug_24_cli.rs  bug_git.rs  cli_parity.rs  cli_smoke.rs  code_intel_smoke.rs  code_search_smoke.rs  comms_cli_smoke.rs  comms_idle_reap.rs  comms_smoke.rs  concurrency_smoke.rs  config_root_smoke.rs  config_schema.rs  daemon_integration.rs  extra_roots_smoke.rs  find_callers_resolved_smoke.rs  git_cache_smoke.rs  git_history_cli.rs  git_history_daemon.rs  git_history_serve.rs  git_history_share_smoke.rs  git_history_smoke.rs  git_parity.rs  git_smoke.rs  goto_definition_xfile_smoke.rs  governance_smoke.rs  harden.rs  incremental_resolve_smoke.rs  incremental_scope_resolve_smoke.rs  init_smoke.rs  lang_fallback_smoke.rs  mcp_smoke.rs  multisession_smoke.rs  plugin_manifest_smoke.rs  (+11 more)
website/: README.md  astro.config.mjs  package-lock.json  package.json
(+211 files in other folders)
