[package]
name = "basemind"
version = "0.20.0"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
edition = "2024"
description = "Full AI context layer over MCP — tree-sitter code-map, document RAG (PDF/Office/HTML/email + OCR + reranker), shared agent memory, on-demand web crawl, git history + blame + per-symbol diff. 300+ languages, 10+ coding-agent harnesses, content-addressed Fjall + LanceDB."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Goldziher/basemind"
documentation = "https://docs.rs/basemind"
homepage = "https://basemind.ai"
keywords = ["mcp", "agent-context", "rag", "code-map", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.cargo-machete]
ignored = ["serde_toon_format"]

[lib]
name = "basemind"
path = "src/lib.rs"

[[bin]]
name = "basemind"
path = "src/main.rs"

[features]
default = []

intelligence = ["dep:xberg", "dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]

documents = [
    "intelligence",
    "xberg/formats",
    "xberg/analysis",
    "xberg/chunking-tokenizers",
    "xberg/embeddings",
    "xberg/reranker",
    "xberg/reranker-presets",
    "xberg/ocr",
    "xberg/paddle-ocr",
    "xberg/layout-detection",
    "xberg/auto-rotate",
    "xberg/ner-onnx",
    "xberg/keywords-yake",
    "xberg/keywords-rake",
    "xberg/summarization",
    "xberg/summarization-llm",
    "xberg/redaction",
    "xberg/qr-codes",
    "dep:serde_toon_format",
]

code-search = ["intelligence", "xberg/embeddings", "xberg/reranker", "xberg/reranker-presets"]

memory = ["intelligence", "xberg/embeddings", "xberg/keywords", "xberg/ner-onnx"]

crawl = ["documents", "dep:crawlberg", "dep:url"]

comms = ["dep:directories", "dep:tokio-util"]

shells = ["dep:rmux-sdk", "dep:rmux-server", "dep:rmux-client", "dep:directories"]

code-intel-js = [
    "dep:oxc_allocator",
    "dep:oxc_parser",
    "dep:oxc_semantic",
    "dep:oxc_span",
    "dep:oxc_syntax",
    "dep:oxc_resolver",
]

code-intel = ["code-intel-js"]

full = ["documents", "memory", "crawl", "comms", "shells", "code-intel", "code-search"]

ort-dynamic = ["xberg?/ort-dynamic"]

[dependencies]
ahash = "0.8"
anstream = "1.0"
anstyle = "1"
anyhow = "1"
arc-swap = "1.9.2"
arrow-array = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }
blake3 = "1"
bstr = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crawlberg = { version = "1.0.3", default-features = false, features = ["native-runtime"], optional = true }
directories = { version = "6", optional = true }
fjall = "3.1.6"
fs2 = "0.4"
futures = { version = "0.3", optional = true }
gix = { version = "0.85.0", features = ["status", "blob-diff", "revision", "max-performance-safe"] }
globset = "0.4"
hex = "0.4"
ignore = "0.4"
jsonschema = "0.46"
lancedb = { version = "0.31", optional = true }
libc = "0.2"
lru = "0.18.0"
memchr = "2"
notify = "8"
notify-debouncer-full = "0.7"
oxc_allocator = { version = "=0.138.0", optional = true }
oxc_parser = { version = "=0.138.0", optional = true }
oxc_resolver = { version = "=11.23.0", optional = true }
oxc_semantic = { version = "=0.138.0", optional = true }
oxc_span = { version = "=0.138.0", optional = true }
oxc_syntax = { version = "=0.138.0", optional = true }
rayon = "1"
regex = "1.12.4"
rmcp = { version = "2.1", features = ["server", "macros", "schemars", "transport-io"] }
rmp-serde = "1"
rmux-client = { version = "0.8", default-features = false, optional = true }
rmux-sdk = { version = "0.8", default-features = false, optional = true }
rmux-server = { version = "0.8", default-features = false, optional = true }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_toon_format = { version = "0.1", optional = true }
streaming-iterator = "0.1"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "io-util",
    "io-std",
    "time",
    "net",
    "fs",
    "process",
] }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
tree-sitter-language-pack = "1.12.4"
url = { version = "2", features = ["serde"], optional = true }
xberg = { version = "1.0.0-rc.16", default-features = false, features = [
    "tokio-runtime",
    "simd-utf8",
], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
insta = "1"
proptest = "1"
rmcp = { version = "2.1", features = ["client", "transport-child-process"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1

[[bench]]
name = "extract"
harness = false

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "git_history"
harness = false
