[workspace]
members = ["crates/stack-graphs", "crates/tree-sitter-graph", "crates/tree-sitter-stack-graphs", "crates/lsp-positions"]

# Shared lint policy for the owned forks under crates/*. The root basemind package opts in via
# its own `[lints] workspace = true` below; each fork crate does the same in its Cargo.toml.
[workspace.lints.clippy]
all = "warn"

[package]
name = "basemind"
version = "0.22.0"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
edition = "2024"
description = "Full AI context layer over MCP — tree-sitter code-map, document RAG (PDF/Office/HTML/email + OCR + reranker), shared agent memory, on-demand web crawl, git history + blame + per-symbol diff. 300+ languages, 10+ coding-agent harnesses, content-addressed Fjall + LanceDB."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Goldziher/basemind"
documentation = "https://docs.rs/basemind"
homepage = "https://basemind.ai"
keywords = ["mcp", "agent-context", "rag", "code-map", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.cargo-machete]
ignored = ["serde_toon_format"]

[lib]
name = "basemind"
path = "src/lib.rs"

[[bin]]
name = "basemind"
path = "src/main.rs"

[features]
default = []

intelligence = ["dep:xberg", "dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]

documents = [
    "intelligence",
    "xberg/formats",
    "xberg/analysis",
    "xberg/chunking-tokenizers",
    "xberg/embeddings",
    "xberg/reranker",
    "xberg/reranker-presets",
    "xberg/ocr",
    "xberg/paddle-ocr",
    "xberg/layout-detection",
    "xberg/auto-rotate",
    "xberg/ner-onnx",
    "xberg/keywords-yake",
    "xberg/keywords-rake",
    "xberg/summarization",
    "xberg/summarization-llm",
    "xberg/redaction",
    "xberg/qr-codes",
    "dep:serde_toon_format",
]

code-search = ["intelligence", "xberg/embeddings", "xberg/reranker", "xberg/reranker-presets"]

memory = ["intelligence", "xberg/embeddings", "xberg/keywords", "xberg/ner-onnx"]

crawl = ["documents", "dep:crawlberg", "dep:url"]

comms = ["dep:tokio-util"]

shells = ["dep:rmux-sdk", "dep:rmux-server", "dep:rmux-client"]

code-intel-js = [
    "dep:oxc_allocator",
    "dep:oxc_parser",
    "dep:oxc_semantic",
    "dep:oxc_span",
    "dep:oxc_syntax",
    "dep:oxc_resolver",
]

code-intel-stack = ["dep:stack-graphs", "dep:tree-sitter-graph", "dep:tree-sitter-stack-graphs"]

code-intel = ["code-intel-js", "code-intel-stack"]

full = ["documents", "memory", "crawl", "comms", "shells", "code-intel", "code-search"]

# Exposes `store::init_isolated_cache()` so integration tests (in `tests/`) can redirect
# `BASEMIND_DATA_HOME` to a per-process temp dir. Integration-test binaries get it via the
# `basemind` dev-dependency below (which enables this feature).
test-support = ["dep:tempfile"]

ort-dynamic = ["xberg?/ort-dynamic"]

[dependencies]
ahash = "0.8"
anstream = "1.0"
anstyle = "1"
anyhow = "1"
arc-swap = "1.9.2"
# Pinned to 58 deliberately: lancedb 0.31 links arrow 58, and bumping ours to 59 puts two arrow
# versions in the graph — `RecordBatch` then no longer satisfies lancedb's `Scannable`. Bump only
# in lock-step with lancedb.
arrow-array = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }
blake3 = "1"
bstr = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crawlberg = { version = "1.0.6", default-features = false, features = ["native-runtime"], optional = true }
directories = "6"
fjall = "3.1.8"
fs2 = "0.4"
futures = { version = "0.3", optional = true }
gix = { version = "0.85.0", features = ["status", "blob-diff", "revision", "max-performance-safe"] }
globset = "0.4"
hex = "0.4"
ignore = "0.4"
jsonschema = "0.48"
lancedb = { version = "0.31", optional = true }
libc = "0.2"
lru = "0.18.1"
memchr = "2"
notify = "8"
notify-debouncer-full = "0.7"
nucleo-matcher = "0.3.1"
oxc_allocator = { version = "=0.138.0", optional = true }
oxc_parser = { version = "=0.138.0", optional = true }
oxc_resolver = { version = "=11.23.0", optional = true }
oxc_semantic = { version = "=0.138.0", optional = true }
oxc_span = { version = "=0.138.0", optional = true }
oxc_syntax = { version = "=0.138.0", optional = true }
rayon = "1"
regex = "1.13.1"
rmcp = { version = "2.2", features = ["server", "macros", "schemars", "transport-io"] }
rmp-serde = "1"
rmux-client = { version = "0.9", default-features = false, optional = true }
rmux-sdk = { version = "0.9", default-features = false, optional = true }
rmux-server = { version = "0.9", default-features = false, optional = true }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_toon_format = { version = "0.1", optional = true }
stack-graphs = { path = "crates/stack-graphs", optional = true }
streaming-iterator = "0.1"
tempfile = { version = "3", optional = true }
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "io-util",
    "io-std",
    "time",
    "net",
    "fs",
    "process",
] }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
tree-sitter-graph = { path = "crates/tree-sitter-graph", optional = true }
tree-sitter-language-pack = "1.12.5"
tree-sitter-stack-graphs = { path = "crates/tree-sitter-stack-graphs", optional = true }
url = { version = "2", features = ["serde"], optional = true }
xberg = { version = "1.0.0-rc.29", default-features = false, features = [
    "tokio-runtime",
    "simd-utf8",
], optional = true }

# The whole stack-graph stack is forked under crates/ (stack-graphs, tree-sitter-stack-graphs,
# tree-sitter-graph, lsp-positions) and every member must resolve to the SAME `lsp-positions`
# instance so their `lsp_positions::Span` types unify — and the upstream crates.io `lsp-positions`
# pins tree-sitter 0.24, which is incompatible with basemind's 0.26. Redirect it to our
# owned, 0.26-ported fork for the whole graph.
[patch.crates-io]
lsp-positions = { path = "crates/lsp-positions" }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[dev-dependencies]
# The crate depends on itself with `test-support` so every integration-test binary can call
# `basemind::store::init_isolated_cache()` to redirect `BASEMIND_DATA_HOME` at a per-process temp
# dir — keeping tests off the real user XDG cache without each test re-declaring the plumbing.
basemind = { path = ".", features = ["test-support"] }
criterion = { version = "0.8", features = ["html_reports"] }
insta = "1"
proptest = "1"
rmcp = { version = "2.2", features = ["client", "transport-child-process"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1

[[bench]]
name = "extract"
harness = false

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "git_history"
harness = false
