[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basemind-hermes-plugin"
version = "0.21.0"
description = "Hermes Agent plugin for basemind — helper skills, slash commands, and agent-comms notifications over the basemind MCP server."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Na'aman Hirschfeld", email = "nhirschfeld@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
]
keywords = ["mcp", "hermes", "agent-context", "code-map", "plugin"]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://basemind.ai"
Documentation = "https://basemind.ai"
Repository = "https://github.com/Goldziher/basemind.git"
Issues = "https://github.com/Goldziher/basemind/issues"

[project.entry-points."hermes_agent.plugins"]
basemind = "basemind_hermes_plugin"

[tool.setuptools]
packages = ["basemind_hermes_plugin"]

[tool.setuptools.package-data]
basemind_hermes_plugin = ["plugin.yaml", "skills/*/SKILL.md", "commands/*.md"]
