[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basemind"
version = "0.1.1"
description = "Tree-sitter code-map + git context MCP server. Use for navigating large or unfamiliar codebases: outline files, find references/callers, search symbols, walk recent history, blame and diff at the symbol level."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Na'aman Hirschfeld", email = "nhirschfeld@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Environment :: Console"
]
keywords = ["mcp", "tree-sitter", "code-map", "scanner", "indexer"]
requires-python = ">=3.8"
dependencies = [
    "certifi>=2024.7.4"
]

[project.urls]
Homepage = "https://github.com/Goldziher/basemind"
Repository = "https://github.com/Goldziher/basemind.git"
Issues = "https://github.com/Goldziher/basemind/issues"

[project.scripts]
basemind = "basemind.cli:main"

[tool.setuptools]
packages = ["basemind"]
