[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basemind"
version = "0.19.2"
description = "Full AI context layer over MCP — tree-sitter code-map, document RAG (PDF/Office/HTML/email + OCR + reranker), shared agent memory, on-demand web crawl, git history + blame + per-symbol diff. 300+ languages, 10+ coding-agent harnesses, content-addressed Fjall + LanceDB."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Na'aman Hirschfeld", email = "nhirschfeld@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Environment :: Console",
]
keywords = ["mcp", "agent-context", "rag", "code-map", "tree-sitter"]
requires-python = ">=3.10"
dependencies = ["certifi>=2024.7.4"]

[project.urls]
Homepage = "https://basemind.ai"
Documentation = "https://basemind.ai"
Repository = "https://github.com/Goldziher/basemind.git"
Issues = "https://github.com/Goldziher/basemind/issues"

[project.scripts]
basemind = "basemind.cli:main"

# Hermes Agent plugin discovery. Hermes imports the target package, reads its bundled
# plugin.yaml, and calls `basemind.register(ctx)`. See basemind/hermes.py.
[project.entry-points."hermes_agent.plugins"]
basemind = "basemind"

[tool.setuptools]
packages = ["basemind"]

# Ship the Hermes manifest + bundled skills/commands inside the wheel so the plugin is
# self-contained. These are generated by scripts/sync-plugin-skills.sh (do not hand-edit).
[tool.setuptools.package-data]
basemind = ["plugin.yaml", "skills/*/SKILL.md", "commands/*.md"]
